# lab3_2

./: CMakeLists.txt  ConsoleCommands.c  ConsoleCommands.h  ConsoleCommandsHelper.c  ConsoleCommandsHelper.h  DialogHelper.c  DialogHelper.h  ExceptionsHandler.c  ExceptionsHandler.h  FileHelper.c  FileHelper.h  ResponsesHandler.c  ResponsesHandler.h  main.c  utils.c  utils.h
externalTable/: TableHelper.c  TableHelper.h
files/: input.txt
localeTable/: TableHelper.c  TableHelper.h
